--- a/index.html
+++ b/index.html
@@ -142,23 +142,23 @@
           <div id="list">
               <div class="item">
                 <div class="faicon"><i class="fa-brands fa-apple"></i></div>
-                <div class="fileType">dmg: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/XXX/VineMapper_Cypher-Installer-XXX.dmg>/latest/dmg</a></span></div>
+                <div class="fileType">dmg: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/$VERSION/VineMapper_Cypher-Installer-$VERSION.dmg>/latest/dmg</a></span></div>
                 <div class="size">Mac64</div>
               </div>
               <div class="item">
                 <div class="faicon"><i class="fa-brands fa-windows"></i></div>
-                <div class="fileType">exe: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/XXX/VineMapper_Cypher-Installer-XXX.exe>/latest/exe</a></span></div>
+                <div class="fileType">exe: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/$VERSION/VineMapper_Cypher-Installer-$VERSION.exe>/latest/exe</a></span></div>
                 <div class="size">Win64</div>
               </div>
               <div class="item">
                 <div class="faicon"><i class="fa-brands fa-ubuntu"></i></div>
-                <div class="fileType">deb: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/XXX/vm_cypher_XXX_amd64.deb>/latest/deb</a></span></div>
+                <div class="fileType">deb: <span class="url"><a href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/$VERSION/vm_cypher_$VERSION_amd64.deb>/latest/deb</a></span></div>
                 <div class="size">Debian amd64</div>
               </div>
               <div class="item">
                 <div class="faicon"><i class="fa-brands fa-linux"></i></div>
                 <div class="fileType">AppImage: <span class="url"><a
-                      href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/XXX/VineMapper_Cypher-XXX.AppImage>/latest/AppImage</a></span>
+                      href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/download/$VERSION/VineMapper_Cypher-$VERSION.AppImage>/latest/AppImage</a></span>
                 </div>
                 <div class="size">Linux amd64 </div>
               </div>
@@ -166,7 +166,7 @@
           </div>
 
           <footer>
-            <div id="version">vXXX</div>
+            <div id="version">v$VERSION</div>
             <a id="release-notes" href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases/latest>Notes de version</a>
             <a id="all-releases" href=https://github.com/dmichaud-gst/VineMapper-Cypher/releases>Toutes les versions</a>
             <a href=https://github.com/dmichaud-gst/VineMapper-Cypher>GitHub</a>
